# FDMJ-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md
Docs/: RPImini2024.md
docs/: FDMJ2024.md
hw1/: CMakeLists.txt  FDMJ SLP Specification.docx  HW1spec.md  Makefile  README.md  assignmentText.md
hw11/: .Makefile.swp  Makefile  README.md
hw12/: CMakeLists.txt  Makefile  README.md
hw13/: Makefile  README.md
hw2/: Makefile  README.md
hw2/lib/frontend/: CMakeLists.txt  lexer.lex  parser.yacc
hw3_4/: CMakeLists.txt  Makefile  README.md
hw5/: CMakeLists.txt  Makefile  README.md
hw5/docs/: lab5.md  lab5_6.md
hw5/include/frontend/: semant.h
hw5/include/utils/dsa/: env.h  types.h  util.h
hw5/include/utils/printer/: xml2ast.h
hw5/lib/: CMakeLists.txt
hw5/lib/frontend/: CMakeLists.txt  semant.c
hw5/lib/lxml/: CMakeLists.txt
hw5/lib/utils/dsa/: env.c  table.c  xml2ast.c
hw5/lib/utils/dsa/xml2asttests/: example2.fmj
hw5/lib/utils/printer/: print_src.c
hw5/test/: answer  example3.fmj  lvalue.fmj  try.fmj
hw5/test/extra/: answer  test01.fmj  test02.fmj  test03.fmj  test04.fmj  test05.fmj  test06.fmj  test07.fmj  test08.fmj  test09.fmj  test10.fmj  test11.fmj  test12.fmj  test13.fmj  test14.fmj  test15.fmj  test16.fmj  test17.fmj  test18.fmj  test19.fmj  test20.fmj
hw5/tools/: CMakeLists.txt  main.c
hw6/: CMakeLists.txt  Makefile  README.md
hw7/: CMakeLists.txt  Makefile  README.md
hw8/: CMakeLists.txt  Makefile  README.md
hw9_10/: Makefile  README.md  hw9_10.code-workspace
lib/: CMakeLists.txt
tools/: CMakeLists.txt  (+4 more)
(+391 files in other folders)
